# DarkLink

./: .gitignore  LICENSE  README.md
agent/: Cargo.toml  Cross.toml  README.md  build.rs  build.sh  config.json
agent/.cargo/: config.toml
agent/.config/: config.json
agent/common/: encryption.rs  sys.rs
agent/src/: 20250406_225826_test.txt  config.rs  dormant.rs  high_threat_tools.rs  lib.rs  main.rs  opsec.rs  received_test.txt  state.rs  util.rs  win_api_hiding.rs
agent/src/commands/: command_shell  command_shell.rs  exec.rs  mod.rs  obfuscated.rs
agent/src/file_handling/: download.rs  mod.rs  mod_test.rs  test_server.rs  upload.rs
agent/src/network/: socks5.rs
agent/src/networking/: communication_test.rs  egress.rs  fast-socks5-pivot.rs  fast_socks5_pivot.rs  mod.rs  socks5.rs  socks5_pivot.rs  socks5_pivot_server.rs
config/: server_settings.toml
server/: Cargo.toml  build-and-run.sh  go.mod  go.sum  regenerate-certs.sh
server/certs/: server.crt  server.key
server/cmd/: server.go
server/communication/: server_manager.go
server/communication/protocols/: dns_over_https.go  http_polling.go  protocol.go
server/config/: config.go  settings.yaml  types.go
server/internal/behaviour/: http_polling.go
server/internal/common/: common.go  obfuscation.go  types.go
server/internal/filestore/: filestore.go  types.go
server/internal/handlers/: command_handler.go  connection_handlers.go  file_handler.go
server/internal/handlers/api/: api_handler.go  file_handlers.go  listener_handlers.go  socks5_handler.go  types.go
server/internal/handlers/web/: static_handlers.go  types.go
server/internal/handlers/ws/: types.go  websocket_handlers.go
server/internal/listeners/: listener.go  listener_manager.go
server/internal/networking/: command_handler.go  connection_handlers.go  file_handler.go  http_polling.go  listener.go  listener_manager.go  protocol.go  socks5.go
server/internal/protocols/: command_handler.go  connection_handlers.go  dns_over_https.go  file_handler.go  http_polling.go  listener.go  listener_manager.go  protocol.go  socks5.go
server/internal/websocket/: log_streamer.go  terminal_session.go
server/pkg/communication/: httpS_client.go  server_manager.go  socks5.go
server/src/: main.rs  test_server.rs
server/static/: index.html
server/static/agents/: agent_linux_amd64  config_windows.json
server/static/agents/windows_package/: run.bat
server/static/listeners/test-listener/: config.json
server/static/webpage/: file_drop.html  index.html  listeners.html  server_terminal.html
server/static/webpage/css/: styles.css
server/web/: README.md  file_drop.html  index-new.html  index.html  listeners.html  migrate-to-vue.sh  package-lock.json  package.json  payload.html  server_terminal.html  vite.config.js
server/web/assets/: main-C4Syx3VJ.css  main-DSwQkN_q.js
server/web/css/: components.css  file-drop.css  payload.css  styles.css  terminal.css
server/web/js/: common.js  file-drop.js  index.js  listeners.js  payload.js  terminal.js
server/web/src/: App.vue  index.html  main.js
server/web/src/composables/: useApi.js  useMockData.js  useWebSocket.js
server/web/src/router/: index.js
server/web/src/views/: Dashboard.vue  FileDrop.vue  (+3 more)
(+22 files in other folders)
