[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.4.1"
os_info = "3.7"
rand = "0.9.1"
get_if_addrs = "0.5"
tokio-socks = "0.5.2"
env_logger = "0.11"
log = "0.4.27"
socks5-proxy = "0.1.1"

[features]
default = []
dll = []  # Feature flag for DLL exports

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1  # Reduce number of codegen units to increase optimizations
panic = "abort"  # Remove panic unwinding to reduce binary size
strip = true     # Strip symbols from binary
