[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
get_if_addrs = "0.5"
hostname = "0.4.1"
log = "0.4.27"
once_cell = "1.19"
os_info = "3.7"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socks5-proxy = "0.1.1"
tokio = { version = "1", features = ["full"] }
tokio-socks = "0.5.2"
zeroize = "1.6"

[features]
default = []
dll = []  # Feature flag for DLL exports

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1  # Reduce number of codegen units to increase optimizations
panic = "abort"  # Remove panic unwinding to reduce binary size
strip = true     # Strip symbols from binary

[lib]
crate-type = ["cdylib"]